--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -9,6 +9,7 @@
         <include .../>
         <exclude .../>
         -->
+        <exclude domain="database" path="primal.db"/>
     </cloud-backup>
     <!--
     <device-transfer>
